# redis-ipc-py

./: .buildinfo  .coveragerc  .gitchangelog.rc  .pep8speaks.yml  .pre-commit-config.yaml  .pylintrc  AUTHORS  CHANGELOG.rst  README.html  README.rst  codecov.yml  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  redis_ipc.py  redis_ipc_msg_test.py  requirements-dev.txt  requirements.txt  search.html  searchindex.js  setup.cfg  test_simple_bus.py  tox.ini
.github/: dependabot.yml
.github/workflows/: bandit.yml  ci.yml  coverage.yml  pylint.yml  release.yml
_modules/: index.html  redis_ipc.html
_sources/api/: modules.rst.txt  redis_ipc.rst.txt
api/: modules.html  redis_ipc.html
docs/source/: conf.py  index.rst
scripts/: fix_pkg_name.sh  run_redis.sh
