[build-system]
requires = ["setuptools>=40.8.0"]
build-backend = "setuptools.build_meta"

[tool.coverage.run]
branch = true
source = ["redis_ipc.py"]

[tool.coverage.paths]
source = ["./"]

[tool.coverage.report]
fail_under = 90
show_missing = true

[tool.black]
line-length = 84
skip-string-normalization = true
include = '\.py$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
