[metadata]
name = redis_ipc
version = attr: redis_ipc.__version__
author = The redis_ipc Authors
author_email = <answers@vctlabs.com>
maintainer = Steve Arnold
maintainer_email = nerdboy@gentoo.org
description = A set of redis_ipc client server classes
long_description = file: README.rst
long_description_content_type = text/x-rst; charset=UTF-8
keywords = freepn, proxy
url = https://github.com/VCTLabs/redis-ipc-py
license = GPL-2.0-or-later
home_page = https://github.com/VCTLabs

classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v2
    Operating System :: POSIX
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows
    Programming Language :: Python :: 3 :: Only
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Software Development :: Testing

[options]

python_requires = >=3.6
zip_safe = True

py_modules =
    redis_ipc

install_requires =
    redis

[options.extras_require]
test =
    nose
dev =
    pylint
    pytest-flake8
    pytest-cov

cov =
    coverage
    coverage_python_version

[check]
metadata = true
restructuredtext = true
strict = false

[bdist_wheel]
universal = 1

[check-manifest]
ignore =
    .codeclimate.yml
    .gitattributes
    .coveragerc
    .gitignore
    .pep8speaks.yml
    codecov.yml
    conda/**

[flake8]
exclude =
    .git,
    __pycache__,
    test,
    build,
    dist

max-line-length = 84
max-complexity = 25
addons = file,open,basestring,xrange,unicode,long,cmp

[nosetests]
traverse-namespace = 1
verbosity = 3
with-coverage = 1
with-doctest = 1
doctest-extension = rst
cover-package = redis_ipc
cover-xml = 1

[coverage:report]
show_missing = True
