[metadata]
name = redis_ipc
attr: setuptools_scm.get_version
author = The redis_ipc Authors
author_email = <answers@vctlabs.com>
maintainer = Steve Arnold
maintainer_email = nerdboy@gentoo.org
description = A set of redis_ipc client server classes
long_description = file: README.rst
long_description_content_type = text/x-rst; charset=UTF-8
keywords = redis, IPC
url = https://github.com/VCTLabs/redis-ipc-py
license = GPL-2.0-or-later
home_page = https://github.com/VCTLabs

classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v2
    Operating System :: POSIX
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows
    Programming Language :: Python :: 3 :: Only
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Software Development :: Testing

[options]
python_requires = >=3.8
zip_safe = True

py_modules =
    redis_ipc

setup_requires =
    setuptools_scm[toml]

install_requires =
    importlib-metadata; python_version < '3.8'
    redis

[options.extras_require]
doc =
    sphinx
    sphinx_git
    recommonmark
    sphinx_rtd_theme
    sphinxcontrib-apidoc

test =
    pytest
    pytest-cov

cov =
    coverage[toml]
    coverage_python_version

[check]
metadata = true
restructuredtext = true
strict = false

[check-manifest]
ignore =
    .codeclimate.yml
    .gitattributes
    .coveragerc
    .gitignore
    .pep8speaks.yml
    conda/**

[flake8]
exclude =
    .git,
    __pycache__,
    test,
    build,
    dist

max-line-length = 90
max-complexity = 25
addons = file,open,basestring,xrange,unicode,long,cmp
